[update] css: reduce the radius border from the avatar

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -2142,7 +2142,7 @@ input, select, textarea {
 			}
 
 			.image.avatar img {
-				border-radius: 100%;
+				border-radius: 25%;
 				width: 100%;
 			}
 
@@ -2600,6 +2600,7 @@ input, select, textarea {
 		color: rgba(255, 255, 255, 0.5);
 		height: 100%;
 		left: 0;
+		/* padding: 8em 4em; */
 		padding: 8em 4em;
 		position: fixed;
 		text-align: right;
@@ -2640,7 +2641,7 @@ input, select, textarea {
 
 		#header .image.avatar {
 			margin: 0 0 1em 0;
-			width: 6.25em;
+			width: 8.25em;
 		}
 
 /* Footer */
