--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -2758,7 +2758,8 @@ input[type="button_thumb"],
 		}
 
 		#header h1 {
-			color: rgba(255, 255, 255, 0.5);
+			color: #ffffff;
+			/* color: rgba(255, 255, 255, 0.5); */
 			font-size: 1.35em;
 			line-height: 1.75em;
 			margin: 0;
